<resources>
    <string name="app_name">CoviDoc</string>
    <string name="app_title">Doctor Covid Community Alert</string>
    <!-- ******* Splash Screen Activity ******* -->
    <string name="splash_title_first">ovi</string>
    <string name="splash_title_next">Doc</string>
    <string name="splash_subtitle">Doctor\nCovid Community Alert</string>
    <!-- ******************************* -->

    <!-- ***** Introduction Slider ****** -->
    <string name="welcome_first">Hey Doctor, \n</string>
    <string name="welcome_second">Welcome \n</string>
    <string name="welcome_third">to anonymous</string>
    <string name="welcome_blue">\nCovidCommunity</string>
    <string name="welcome_last">\nAlert &#128075;</string>
    <string name="together_we">Together we can save lives!</string>
    <string name="let_s_get_s">LET\'S GET STARTED </string>
    <string name="how_it_works">How it works &#129300;</string>
    <string name="step_1_of_2">Step 1 of 2 </string>
    <string name="step_2_of_2">Step 2 of 2 </string>
    <string name="skip_step">SKIP THIS STEP </string>
    <string name="camera">Camera</string>
    <string name="we_need_camera">We need access to the camera to allow you
     to scan the patient\’s QR Code and log their health status.</string>
    <string name="give_cam">GIVE CAMERA PERMISSION </string>
    <string name="contact">Contacts</string>
    <string name="we_need_contact">We need access to the contacts to allow
    	you to invite other Doctors.</string>
    <string name="give_contact">GIVE ACCESS TO CONTACTS</string>
    <string name="all_set">All Set!</string>
    <string name="what_to_do">You will now be able to scan a patient\'s QR code,
    	log their health status and invite other doctors on the app.</string>
    <string name="go">GO TO APPLICATION</string>
    <!-- ******************************* -->

    <!-- ******* Utils **************** -->
    <!-- Permission Request -->
    <string name="cam_disabled">"Camera" Disabled</string>
    <string name="cam_please_en">Please, enable "Camera" </string>
    <string name="cont_disabled">"Read Contacts" Disabled </string>
    <string name="cont_please_en">Please, enable "Read Contacts" </string>
    <!-- ******************************* -->

    <!-- ******* Login Doctor Activity ******* -->
    <string name="login_doctor_title">Login Doctor App</string>
    <string name="tv_mobile_phone">Mobile Phone</string>
    <string name="tv_code">Enter the 6 digits code you received by SMS</string>
    <string name="bt_send_number">Send</string>
    <string name="toast_insert_num">Insert number</string>
    <string name="text_progbar">Login...</string>
    <string name="toast_number_not_accepted">Phone Number is not accepted</string>
    <string name="toast_login_not_accepted">Login is not accepted</string>
    <!-- ******************************* -->

    <!-- ******* Login Accepted Activity *******-->
    <string name="tv_title_login_accepted">Activated</string>
    <string name="tv_accepted">You have been accepted</string>
    <!-- ******************************* -->

    <!-- ******* Doctor View Activity ******* -->
    <string name="main_title">Welcome to CoviDoc&#127976;</string>
    <string name="bt_scan_qrcode">Click here to\nscan QR code</string>
    <string name="tv_change_patient_status">Scan the patient account QR code to change their health status,
        or invite more doctors to this app.</string>
    <string name="bt_invite_doc">Invite other doctors</string>
    <string name="bt_change_status">Change Status Patient</string>

    <!--- ***** exit alert dialog ****** -->
    <string name="alert_exit_title">Exit</string>
    <string name="alert_exit_msg">Do you want to exit?</string>
    <string name="alert_exit_pos_bt">Yes</string>
    <string name="alert_exit_neg_bt">No</string>
    <!-- ******************************* -->

    <!-- ******* Scanner Activity ******* -->
    <string name="toast_scanner_start">Scan started</string>
    <string name="toast_scanner_stop">Scan interrupted</string>
    <string name="toast_scanner_recognized">Code recognized</string>
    <string name="toast_wrong_scan">Scanned QR code is incorrect</string>
    <string name="toast_scanner_code_not_recognized">Scanned Patient ID is wrong, please scan QR code again</string>
    <string name="toast_scanner_no_resp_change_status">Error, please enable Internet and scan QR code again</string>
    <string name="toast_scanner_err_status_change">Error, please scan QR code again</string>
    <!-- ******************************* -->

    <!-- ***** Scanner Success Activity ****-->
    <string name="tv_scanner_success">Patient ID successfully scanned</string>
    <string name="tv_show_patientid"><![CDATA[Patient ID is <b>%d</b>, please copy it on medical records. \n
        The status of the Patient has been changed to <b>\'Suspected\'</b> waiting swab results. \n
        If you click on "Next Step" button then you can choice to change status, if you already know swab results,
        or come back to main page and change status subsequently.]]></string>
    <string name="bt_next">Next Step</string>
    <string name="alert_results_title">Do you know the swab results of this Patient?</string>
    <string name="alert_results_msg"><![CDATA[Patient ID: <b>%d</b>]]></string>
    <string name="alert_results_pos_bt">Yes</string>
    <string name="alert_results_neg_bt">No</string>
    <!-- ****************************** -->

    <!-- ******* Invite Contacts Activity ******* -->
    <string name="tv_invite_contacts">Select another doctor</string>
    <string name="bt_invite">Invite</string>
    <string name="toast_select_doc">Select at least one contact</string>
    <string name="progrdial_loading_con">Loading Contacts&#8230;</string>
    <string name="progrdial_waiting">Please wait</string>
    <string name="alertdial_invite_title">Are you sure to invite this number?</string>
    <string name="alertdial_yes">Yes</string>
    <string name="alertdial_no">No</string>
    <string name="toast_click_invite_doc">Sending new Doctor...</string>
    <string name="toast_num_doc_invited">Doctor invited</string>
    <string name="toast_no_resp_inv_doc">Error, please check and enable Internet</string>
    <string name="toast_err_doc_inv">Error, select the doctor again</string>
    <!-- ******************************* -->

    <!-- ***** Change Patient Status Activity ****-->
    <string name="diagnosis_title">Diagnosis&#128300;</string>
    <string name="bt_confirm_covid">&#129298;\ \ \ \ Positive to COVID-19</string>
    <string name="bt_negative_covid">&#128521;\ \ \ \ Negative to COVID-19</string>
    <string name="bt_recover_covid">&#128522;\ \ \ \ Healed</string>
    <string name="bt_other_status_covid">Other</string>
    <string name="toast_click_status_changed">Changing patient status...</string>
    <string name="toast_status_changed">Health status changed</string>
    <string name="toast_code_not_recognized">Patient ID is wrong, please ask it again to patient</string>
    <string name="toast_no_resp_change_status">Error, please check and enable Internet</string>
    <string name="toast_err_status_change">Error, please change status again</string>
    <!-- ******************************* -->

    <!-- ***** Insert Patient Id Activity ****-->
    <string name="tv_patient_id">Text Patient ID</string>
    <string name="et_patient_id">(Patient ID)</string>
    <string name="bt_check_id">Change Status</string>
    <string name="toast_err_empty_id">Insert a patient ID</string>
    <string name="alert_err_check_patid">Patient ID is wrong, please check it and call Patient to ask it again.</string>
    <!-- ******************************* -->


    <!-- ****** How it works Activity *****-->
    <string name="how_it_works_p0">We will use the camera and contacts in
    	order to scan the patient\’s QR code and invite other doctors.</string>
    <string name="how_it_works_q1">How can I help?</string>
    <string name="how_it_works_p1">You can log the patient\’s health
    	status in order to notify others that have been interacting
    	with the patient.</string>
    <string name="how_it_works_q2"> How can I promote this application? </string>
    <string name="how_it_works_p2">You can invite other trusted doctors
    	by sending us their phone number.</string>
    <!-- ******************************* -->


</resources>
