<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_doctor_title"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/tv_mobilephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_mobile_phone"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="138dp" />

    <EditText
        android:id="@+id/et_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="195dp" />

    <EditText
        android:id="@+id/et_sms_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="496dp" />

    <TextView
        android:id="@+id/tv_write_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_code"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="430dp" />

    <Button
        android:id="@+id/bt_send_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_send_number"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="294dp" />

</androidx.constraintlayout.widget.ConstraintLayout>