<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <ImageView
        android:id="@+id/logo_id"
        style="@style/background_image"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="-50dp"
        android:layout_gravity="bottom"
        android:src="@drawable/ic_doctorapp_bubbles" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <!-- Location -->
        <TextView
            style="@style/intro_title"
            android:id="@+id/contact"
            android:layout_marginTop="100dp"
            android:text="@string/all_set" />


        <!-- To monitor more accurately your interactions we will
        ask you permission to use Location. It's anonymous. -->
        <TextView
            style="@style/intro_subtitle"
            android:id="@+id/we_need_contact"
            android:text="@string/what_to_do" />

    </LinearLayout>

    <!-- BUTTON -->
    <Button style="@style/button_primary"
        android:shadowColor="@color/white"
        android:id="@+id/button_next"
        android:text="@string/go"/>


</RelativeLayout>