<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_scanner_success"
        style="@style/intro_title"
        android:layout_marginTop="16dp"
        android:text="@string/tv_scanner_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_show_patient_id"
        style="@style/intro_subtitle"
        android:layout_width="334dp"
        android:layout_height="87dp"
        android:layout_marginTop="70dp"
        android:text="@string/tv_show_patientid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_scanner_success"
        app:layout_constraintTop_toBottomOf="@+id/tv_scanner_success" />

    <Button
        android:id="@+id/bt_next"
        style="@style/button_primary"
        android:text="@string/bt_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_show_patient_id"
        app:layout_constraintStart_toStartOf="@+id/tv_show_patient_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_show_patient_id"
        app:layout_constraintVertical_bias="0.864" />

</androidx.constraintlayout.widget.ConstraintLayout>